FIX:nav links on mobile flwoing out of screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,9 +60,6 @@ a.nav-link {
     transition: all 0.3s ease;
 }
 
-a.nav-link:hover {
-    transform: scale(1.1);
-}
 
 img.logo {
     width: 6rem;
@@ -164,4 +161,10 @@ footer {
 
 a.footer-links {
     color: var(--body);
+}
+
+@media (min-width: 992px) {
+    a.nav-link:hover {
+        transform: scale(1.1);
+    }
 }
